--- a/src/renderer/src/assets/css/main.css
+++ b/src/renderer/src/assets/css/main.css
@@ -3,22 +3,19 @@
 body {
   overflow: hidden;
   user-select: none;
-}
-
-code {
-  font-weight: 600;
-  padding: 3px 5px;
-  border-radius: 2px;
-  background-color: var(--color-background-mute);
   font-family:
-    ui-monospace,
-    SFMono-Regular,
-    SF Mono,
-    Menlo,
-    Consolas,
-    Liberation Mono,
-    monospace;
-  font-size: 85%;
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 #root {
@@ -52,7 +49,6 @@ code {
 
 .text {
   font-size: 28px;
-  color: var(--ev-c-text-1);
   font-weight: 700;
   line-height: 32px;
   text-align: center;
